--- a/templates/index.html
+++ b/templates/index.html
@@ -5,14 +5,14 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon"  href="/static/img/favicon.ico">
-  <script src="https://cdn.staticfile.org/popper.js/1.15.0/umd/popper.min.js"></script>
+<!--  <script src="https://cdn.staticfile.org/popper.js/1.15.0/umd/popper.min.js"></script>-->
 
-	<link rel="stylesheet" type="text/css" href="https://www.jq22.com/jquery/bootstrap-3.3.4.css">
-	<link rel="stylesheet" type="text/css" href="https://www.jq22.com/jquery/font-awesome.4.6.0.css">
+	<link rel="stylesheet" type="text/css" href="/static/css/bootstrap.min.css">
+	<!--<link rel="stylesheet" type="text/css" href="https://www.jq22.com/jquery/font-awesome.4.6.0.css">-->
 	<link rel="stylesheet" type="text/css" href="/static/css/bootsnav.css">
 
-	<script src="https://www.jq22.com/jquery/jquery-1.10.2.js"></script>
-	<script src="https://www.jq22.com/jquery/bootstrap-3.3.4.js"></script>
+	<script src="/static/js/jquery.min.js"></script>
+	<script src="/static/js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="/static/js/bootsnav.js"></script>
 </head>
 <style>
@@ -118,8 +118,9 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu{
                     <ul class="dropdown-menu">
                       <li><a href="/view_my_strategy.html">按策略统计</a></li>
                       <li><a href="/view_my_account.html">按账户统计</a></li>
-                      <li><a href="/edit_hold_bond.html">更新持仓数据</a></li>
-                      <li><a href="/view_up_down.html">可转债涨跌数据</a></li>
+                        <li><a href="/new_sync_trade_data.html">同步交易数据</a></li>
+                        <li><a href="/view_up_down.html">可转债涨跌数据</a></li>
+                        <li><a href="/edit_hold_bond.html">更新持仓数据</a></li>
                     </ul>
                 </li>
                 <li class="dropdown">
