--- a/templates/sync_trade_data.html
+++ b/templates/sync_trade_data.html
@@ -242,10 +242,10 @@
                     }
                     $("#memo").val(data['memo'])
                 } else {
-                    alert("status is failure. not find bond by code:" + $("#bond_code").val())
+                    // alert("status is failure. not find bond by code:" + $("#bond_code").val())
                 }
             }).error(function (XMLHttpRequest, status, error){
-                alert("occur exception. not find bond by code:" + $("#bond_code").val())
+                // alert("occur exception. not find bond by code:" + $("#bond_code").val())
             })
             }
 
