--- a/templates/index.html
+++ b/templates/index.html
@@ -122,14 +122,14 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu{
                         <li><a href="/edit_hold_bond.html">更新持仓数据</a></li>
                         <li><a href="/view_up_down.html">可转债涨跌排行</a></li>
                         <li><a href="/view_my_yield.html">我的收益率</a></li>
-                        <li><a href="#" onclick="$.get('/update_bond_yield.html', doCallback);return false">更新可转债收益率</a></li>
+                        <li><a href="#" onclick="process_wrapper('/update_bond_yield.html');return false">更新可转债收益率</a></li>
                     </ul>
                 </li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">实时更新</a>
                     <ul class="dropdown-menu">
                       <li><a target="_blank" href="https://www.jisilu.cn/account/login/">登录集思录</a></li>
-                      <li><a href="#" onclick="$.get('/jsl_update_data.html', doCallback);return false">直接同步集思录可转债数据</a></li>
+                      <li><a href="#" onclick="process_wrapper('/jsl_update_data.html');return false">直接同步集思录可转债数据</a></li>
                       <li><a target="_blank" href="https://www.jisilu.cn/data/cbnew/cb_list/">访问集思录JSON格式数据</a></li>
                       <li><a href="/sync_jsl_bond_data.html">提交集思录JSON格式数据</a></li>
                     </ul>
@@ -137,7 +137,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu{
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">数据同步</a>
                     <ul class="dropdown-menu">
-                      <li><a href="#" onclick="$.get('/cb_ninwen.html', doCallback);return false">更新所有可转债数据(非实时)</a></li>
+                      <li><a href="#" onclick="process_wrapper('/cb_ninwen.html');return false">更新所有可转债数据(非实时)</a></li>
                       <li><a href="/cb_ninwen_detail.html">更新可转债条款明细</a></li>
                       <li><a href="/stock_10jqka.html">同步同花顺正股诊断数据</a></li>
                       <li><a href="/stock_eastmoney.html">同步东财正股关键指标</a></li>
@@ -189,13 +189,9 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu{
 {% endif %}
 
     <!-- Modal HTML -->
-    <div id="myModal" class="modal">
-        <div class="modal-dialog" style='width:300px;height:150px'>
+    <div id="myModal" class="modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" data-backdrop='static'>
+        <div class="modal-dialog" style='width:300px;'>
             <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                    <h4 class="modal-title">操作</h4>
-                </div>
                 <div class="modal-body" id = 'dialog_body'>
                     操作成功
                 </div>
@@ -207,12 +203,50 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu{
             </div>
         </div>
     </div>
+
+
+    <!-- Modal -->
+    <div class="modal fade" id="processing" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" data-backdrop='static' >
+        <div class="vertical-alignment-helper">
+            <div class="modal-dialog vertical-align-center" role="document" style="width:300px">
+                <div class="modal-content">
+
+                    <div class="modal-body"><img src="/static/img/processing.gif">处理中, 请稍后...</div>
+
+                </div>
+            </div>
+        </div>
+    </div>
+<style>
+    .vertical-alignment-helper {
+        display:table;
+        height: 100%;
+        width: 100%;
+        pointer-events:none; /* This makes sure that we can still click outside of the modal to close it */
+    }
+    .vertical-align-center {
+        /* To center vertically */
+        display: table-cell;
+        vertical-align: middle;
+        pointer-events:none;
+    }
+    .modal-content {
+        /* Bootstrap sets the size of the modal in the modal-dialog class, we need to inherit it */
+        width:inherit;
+        max-width:inherit; /* For Bootstrap 4 - to avoid the modal window stretching full width */
+        height:inherit;
+        /* To center horizontally */
+        margin: 0 auto;
+        pointer-events: all;
+    }
+</style>
 <script type="text/javascript">
     $(document).ready(function(){
         function alignModal(){
             var modalDialog = $(this).find(".modal-dialog");
             /* Applying the top margin on modal dialog to align it vertically center */
             modalDialog.css("margin-top", Math.max(0, ($(window).height() - modalDialog.height()) / 2));
+
         }
         // Align modal when it is displayed
         $(".modal").on("shown.bs.modal", alignModal);
@@ -225,11 +259,35 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu{
 
     function doCallback(data, status) {
         if (status == 'success' && data == 'OK'){
+            // alert('body begin')
             $('#dialog_body').text('操作成功!');
+            // alert('body end')
         }else{
             $('#dialog_body').html('<p style=\'color: red\'>后端异常, 操作失败, 请检查!</p>')
         }
         $('#myModal').modal('show');
+        document.body.style.cursor = ''
+    }
+
+    function process(url) {
+        var defer = $.Deferred();
+        $.ajax({
+            url:url,
+            success: function (data, status) {
+                defer.resolve({'data':data, 'status':status})
+            }
+        });
+        return defer.promise()
+    }
+
+    function process_wrapper(url) {
+        document.body.style.cursor = 'wait'
+        $('#processing').modal('show')
+
+        $.when(process(url)).done(function (return_value) {
+            $('#processing').modal('hide')
+            doCallback(return_value['data'], return_value['status'])
+        });
     }
 </script>
 </body>
