--- a/templates/page_with_navbar.html
+++ b/templates/page_with_navbar.html
@@ -2,7 +2,7 @@
     <head>
         <meta charset="UTF-8">
 
-        <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/echarts-nightly@5.2.1-dev.20210902/dist/echarts.min.js"></script>
+        <script type="text/javascript" src="/static/js/echarts.min.js"></script>
         <link rel="icon" href="/static/img/favicon.ico">
 
         <link rel="stylesheet" type="text/css" href="/static/css/bootstrap.min.css">
