--- a/templates/index.html
+++ b/templates/index.html
@@ -104,6 +104,16 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu{
             <ul class="nav navbar-nav" data-in="fadeInDown" data-out="fadeOutUp">
                 <li><a href="#">Home</a></li>
                 <li><a href="/view_market.html">可转债策略</a></li>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">可转债排行</a>
+                    <ul class="dropdown-menu">
+                      <li><a href="/view_tree_map.html">可转债涨跌分布</a></li>
+                      <li><a href="/view_up_down.html">可转债涨跌排行</a></li>
+                        <li><a href="/view_discount.html">溢价率折价排行</a></li>
+                        <li><a href="/view_stock.html">正股涨幅排行</a></li>
+                      <li><a href="/view_turnover.html">换手率排行</a></li>
+                    </ul>
+                </li>
 
                 {% if current_user and current_user.is_authenticated %}
                 <li class="dropdown">
@@ -120,45 +130,51 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu{
                       <li><a href="/view_my_account.html">按账户统计</a></li>
                         <li><a href="/new_sync_trade_data.html">同步交易数据</a></li>
                         <li><a href="/edit_hold_bond.html">更新持仓数据</a></li>
-                        <li><a href="/view_up_down.html">可转债涨跌排行</a></li>
+                        <li><a href="/view_my_up_down.html">可转债涨跌排行</a></li>
                         <li><a href="/view_my_yield.html">我的收益率</a></li>
                         <li><a href="#" onclick="process_wrapper('/update_bond_yield.html');return false">更新可转债收益率</a></li>
                     </ul>
                 </li>
                 <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">实时更新</a>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">系统管理</a>
                     <ul class="dropdown-menu">
-                      <li><a target="_blank" href="https://www.jisilu.cn/account/login/">登录集思录</a></li>
-                      <li><a href="#" onclick="process_wrapper('/jsl_update_data.html');return false">直接同步集思录可转债数据</a></li>
-                      <li><a target="_blank" href="https://www.jisilu.cn/data/cbnew/cb_list/">访问集思录JSON格式数据</a></li>
-                      <li><a href="/sync_jsl_bond_data.html">提交集思录JSON格式数据</a></li>
-                    </ul>
-                </li>
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">数据同步</a>
-                    <ul class="dropdown-menu">
-                      <li><a href="#" onclick="process_wrapper('/cb_ninwen.html');return false">更新所有可转债数据(非实时)</a></li>
-                      <li><a href="/cb_ninwen_detail.html">更新可转债条款明细</a></li>
-                      <li><a href="/stock_10jqka.html">同步同花顺正股诊断数据</a></li>
-                      <li><a href="/stock_eastmoney.html">同步东财正股关键指标</a></li>
-                      <li><a href="/stock_xueqiu.html">同步雪球正股财报指标</a></li>
-                    </ul>
-                </li>
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">导入导出</a>
-                    <ul class="dropdown-menu">
-                      <li><a href="/upload_db_data.html">数据导入</a></li>
-                      <li><a href="/download_db_data.html">数据导出</a></li>
+                      <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">实时更新&nbsp;&nbsp;▸</a>
+                            <ul class="dropdown-menu">
+                              <li><a target="_blank" href="https://www.jisilu.cn/account/login/">登录集思录</a></li>
+                              <li><a href="#" onclick="process_wrapper('/jsl_update_data.html');return false">直接同步集思录可转债数据</a></li>
+                              <li><a target="_blank" href="https://www.jisilu.cn/data/cbnew/cb_list/">访问集思录JSON格式数据</a></li>
+                              <li><a href="/sync_jsl_bond_data.html">提交集思录JSON格式数据</a></li>
+                            </ul>
+                        </li>
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">数据同步&nbsp;&nbsp;▸</a>
+                            <ul class="dropdown-menu">
+                              <li><a href="#" onclick="process_wrapper('/cb_ninwen.html');return false">更新所有可转债数据(非实时)</a></li>
+                              <li><a href="/cb_ninwen_detail.html">更新可转债条款明细</a></li>
+                              <li><a href="/stock_10jqka.html">同步同花顺正股诊断数据</a></li>
+                              <li><a href="/stock_eastmoney.html">同步东财正股关键指标</a></li>
+                              <li><a href="/stock_xueqiu.html">同步雪球正股财报指标</a></li>
+                            </ul>
+                        </li>
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">导入导出&nbsp;&nbsp;▸</a>
+                            <ul class="dropdown-menu">
+                              <li><a href="/upload_db_data.html">数据导入</a></li>
+                              <li><a href="/download_db_data.html">数据导出</a></li>
+                            </ul>
+                        </li>
+
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">数据库操作&nbsp;&nbsp;▸</a>
+                            <ul class="dropdown-menu">
+                              <li><a href="/update_database.html">修改数据</a></li>
+                              <li><a href="/query_database.html">查询数据</a></li>
+                            </ul>
+                        </li>
                     </ul>
                 </li>
 
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">数据库操作</a>
-                    <ul class="dropdown-menu">
-                      <li><a href="/update_database.html">修改数据</a></li>
-                      <li><a href="/query_database.html">查询数据</a></li>
-                    </ul>
-                </li>
 
                 <li><a href="/logout.html">退出</a></li>
 <!--                <li><a href="#" onclick="-->
