--- a/templates/edit_hold_bond.html
+++ b/templates/edit_hold_bond.html
@@ -159,7 +159,7 @@
                         <option value="其他"{% if bond.account=='其他' %} selected="selected"{% endif %}>其他</option>
                     </select>
                     <div class="invalid-feedback">
-                        必须指定策略类型
+                        必须指定账户
                     </div>
                 </div>
 
@@ -176,6 +176,7 @@
                         <option value="基本面"{% if bond.strategy_type=='基本面' %} selected="selected"{% endif %}>基本面</option>
                         <option value="多因子"{% if bond.strategy_type=='多因子' %} selected="selected"{% endif %}>多因子</option>
                         <option value="双低轮动"{% if bond.strategy_type=='双低轮动' %} selected="selected"{% endif %}>双低轮动</option>
+                        <option value="猪肉概念"{% if bond and bond.strategy_type=='猪肉概念' %} selected="selected"{% endif %}>猪肉概念</option>
                         <option value="其他"{% if bond.strategy_type=='其他' %} selected="selected"{% endif %}>其他</option>
                     </select>
                     <div class="invalid-feedback">
